fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 body {
@@ -65,12 +70,12 @@ hr {
 
 .reservation-cards-container {
   min-height: 35rem;
-  overflow-x: scroll;
+  overflow-y: auto;
 }
 
 .reservation-card-container {
   max-height: 50vh;
-  overflow-x: scroll;
+  overflow-y: auto;
 }
 
 .reservation-card-item {
@@ -128,7 +133,7 @@ hr {
   display: flex;
   flex-direction: column;
   max-height: 80vh;
-  overflow-x: scroll;
+  overflow-y: auto;
 }
 
 .customer-food {
@@ -151,6 +156,7 @@ hr {
   width: 80%;
   margin: 1rem;
   height: fit-content;
+  overflow: visible;
 }
 
 .customer-food-card-customer-info {
@@ -169,6 +175,12 @@ hr {
   border: none;
   cursor: pointer;
   height: fit-content;
+  transition: all 0.2s ease-in-out;
+}
+
+.customer-food-card-button:hover {
+  transition: all 0.2s ease-in-out;
+  color: red;
 }
 
 .customer-food-name-container :last-child {
